--- a/calculator.html
+++ b/calculator.html
@@ -29,6 +29,6 @@
         <input type="button" value="=" id="equals" />
       </div>
     </div>
-
+    <script src="./Calculator.js" ></script>
   </body>
 </html>
